add prefix flag; stop walking through files after .env has found

--- a/examples/nextjs/docker-compose.yml
+++ b/examples/nextjs/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     # wrong: --cmd node server.js
     #
     command: >
+      --prefix NEXT_PUBLIC
       --cmd "node server.js"
       --verbose
     restart: unless-stopped
