--- a/examples/react/docker-compose.yml
+++ b/examples/react/docker-compose.yml
@@ -5,14 +5,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    # pass command to run after replacement
-    # make sure that command is in qoutes, otherwise in this case
-    # spa-env will fail with "unknown shorthand flag: 's' in -s" error
-    #
-    # right: --cmd "npx serve -s dist -l 3000"
-    # wrong: --cmd npx serve -s dist -l 3000
-    #
-    command: --cmd "npx serve -s dist -l 3000"
+    command: --verbose
     restart: unless-stopped
     environment:
       API_URL: "https://api.com/"
