--- a/examples/nextjs/.env.production
+++ b/examples/nextjs/.env.production
@@ -1,5 +1,5 @@
-# server variables
+# server side variables
 POSTGRES_CONN_STRING=POSTGRES_CONN_STRING
-# client variables
+# client side variables
 NEXT_PUBLIC_API_URL=API_URL
 NEXT_PUBLIC_SECRET_TOKEN=SECRET_TOKEN
