--- a/examples/nextjs/.env.development
+++ b/examples/nextjs/.env.development
@@ -1,5 +1,5 @@
-# server variables
+# server side variables
 POSTGRES_CONN_STRING=postgres://username:password@localhost:5432/database
-# client variables
+# client side variables
 NEXT_PUBLIC_API_URL=https://dev.api.com/
 NEXT_PUBLIC_SECRET_TOKEN=lkh736
