--- a/examples/nextjs/docker-compose.yml
+++ b/examples/nextjs/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     command: --verbose
     restart: unless-stopped
     environment:
-      # server variables
+      # server side variables
       POSTGRES_CONN_STRING: "postgres://username:password@prod.server:5432/database"
-      # client variables
+      # client side variables
       API_URL: "https://api.com/"
       SECRET_TOKEN: "54321"
     ports:
