--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -2,7 +2,10 @@ name: Lint & Test
     
 on:
   pull_request:
-    types: [opened, reopened]
+    types: 
+      - opened 
+      - reopened
+      - edited
       
 jobs:
   check:
