--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -8,7 +8,7 @@ on:
       - reopened
       
 jobs:
-  check:
+  lint-test:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
