--- a/examples/react/docker-compose.yml
+++ b/examples/react/docker-compose.yml
@@ -7,8 +7,6 @@ services:
       dockerfile: Dockerfile
     command: --verbose
     restart: unless-stopped
-    environment:
-      API_URL: "https://api.com/"
-      SECRET_TOKEN: "54321"
+    env_file: .env
     ports:
       - "3000:3000"
