docs and examples fixed

--- a/examples/nextjs/Dockerfile
+++ b/examples/nextjs/Dockerfile
@@ -39,17 +39,15 @@ FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
-# Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED 1
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
+RUN addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nextjs
 
 COPY --from=builder /app/public ./public
 
 # Set the correct permission for prerender cache
-RUN mkdir .next
-RUN chown nextjs:nodejs .next
+RUN mkdir .next && chown nextjs:nodejs .next
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
@@ -58,7 +56,7 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 # copy spa-env binary from official image
 # notice that next copies .env file to dist automatically
 # so we don't have to do it manually unlike in react example
-COPY --from=tcaty/spa-env /spa-env /spa-env
+COPY --from=tcaty/spa-env:v1.0.1 /spa-env /spa-env
 
 ENV HOSTNAME="0.0.0.0" \
     PORT="3000"
