placeholder prefix completed

--- a/examples/nextjs/.env.production
+++ b/examples/nextjs/.env.production
@@ -1,5 +1,10 @@
-# server side variables
-POSTGRES_CONN_STRING=POSTGRES_CONN_STRING
+# server side variables 
+# they don't need placeholder cause
+# they are being parsed during runtime from actual environment
+# POSTGRES_CONN_STRING
+#
 # client side variables
-NEXT_PUBLIC_API_URL=API_URL
-NEXT_PUBLIC_SECRET_TOKEN=SECRET_TOKEN
+# use API_URL environment variable to set value here
+NEXT_PUBLIC_API_URL=PLACEHOLDER_API_URL
+# use SECRET_TOKEN environment variable to set value here
+NEXT_PUBLIC_SECRET_TOKEN=PLACEHOLDER_SECRET_TOKEN
