--- a/examples/react/Dockerfile
+++ b/examples/react/Dockerfile
@@ -18,7 +18,7 @@ WORKDIR /usr/src/react
 # copy static files
 COPY --from=build /usr/src/react/dist dist/
 # copy spa-env binary from official image
-COPY --from=tcaty/spa-env:v1.0.1 /spa-env /spa-env
+COPY --from=tcaty/spa-env /spa-env /spa-env
 # WARNING: 
 # vite doesn't copy .env file to dist by default
 # you should copy it manually
@@ -43,5 +43,5 @@ ENTRYPOINT [ \
     # specify in which form command will be run
     # as you can see, command above uses environment variables $HOSTNAME and $PORT
     # therefore, it must be run in shell form (by default command runs in exec form)
-    "--form", "shell" \
+    "--cmd-form", "shell" \
 ]
