--- a/examples/react/Dockerfile
+++ b/examples/react/Dockerfile
@@ -38,6 +38,12 @@ ENTRYPOINT [ \
     "--workdir", "/usr/src/react/dist", \
     # specify name of .env file for production mode
     "--dotenv", ".env.production", \
+    # specify environment variables prefix which will be replaced
+    # variables without this prefix won't be affected
+    "--key-prefix", "VITE", \
+    # specify placeholder prefix to replace
+    # values without this prefix won't be replaced
+    "--placeholder-prefix", "PLACEHOLDER", \
     # specify command which will be run after successfull replacement
     "--cmd", "npx serve -s dist -l tcp://$HOSTNAME:$PORT", \
     # specify in which form command will be run
